// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toolbar item defs has a getToolbarItemDefs function that matches snapshots 1`] = `
Object {
  "leftToolbarItemDefs": Array [
    Object {
      "displayLabel": true,
      "dropdownOptions": Array [
        "selectedEffectiveAt",
      ],
      "dropdownText": Array [
        "Unknown",
      ],
      "label": "Effective At",
      "onChange": [MockFunction],
      "rank": 7,
      "tooltip": "Select Effective Time to display",
      "type": "Dropdown",
      "value": "selectedEffectiveAt",
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-group-column-picker",
      "enumKeysToDisplayStrings": Map {
        "name" => "Name",
        "effectiveAt" => "Effective At",
        "effectiveUntil" => "Effective Until",
        "latitudeDegrees" => "Latitude",
        "longitudeDegrees" => "Longitude",
        "depthKm" => "Depth",
        "elevationKm" => "Elevation",
        "description" => "Description",
        "type" => "Type",
      },
      "enumOfKeys": Object {
        "depthKm": "depthKm",
        "description": "description",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "type": "type",
      },
      "label": "Channel Group Columns",
      "menuLabel": "Channel Group Columns",
      "onChange": [Function],
      "rank": 8,
      "tooltip": "Select columns to be shown in the channel group table below",
      "type": "CheckboxList",
      "values": Map {
        "name" => true,
        "effectiveAt" => true,
        "effectiveUntil" => true,
        "latitudeDegrees" => true,
        "longitudeDegrees" => true,
        "depthKm" => true,
        "elevationKm" => true,
        "description" => true,
        "type" => true,
      },
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-column-picker",
      "enumKeysToDisplayStrings": Map {
        "name" => "Name",
        "effectiveAt" => "Effective At",
        "effectiveUntil" => "Effective Until",
        "latitudeDegrees" => "Latitude",
        "longitudeDegrees" => "Longitude",
        "depthKm" => "Depth",
        "elevationKm" => "Elevation",
        "nominalSampleRateHz" => "Sample Rate",
        "units" => "Units",
        "orientationHorizontalDegrees" => "Horizontal Angle",
        "orientationVerticalDegrees" => "Vertical Angle",
        "calibrationFactor" => "Calibration Factor",
        "calibrationPeriod" => "Calibration Period",
        "calibrationEffectiveAt" => "Calibration Effective At",
        "calibrationTimeShift" => "Calibration Time Shift",
        "calibrationStandardDeviation" => "Calibration Std Dev",
        "northDisplacementKm" => "North Displacement",
        "eastDisplacementKm" => "East Displacement",
        "verticalDisplacementKm" => "Vertical Displacement",
        "description" => "Description",
        "channelDataType" => "Data Type",
        "channelBandType" => "Band Type",
        "channelInstrumentType" => "Instrument Type",
        "channelOrientationCode" => "Orientation Code",
        "channelOrientationType" => "Orientation Type",
        "calibrationResponseId" => "Calibration ID",
        "fapResponseId" => "FAP Resp ID",
      },
      "enumOfKeys": Object {
        "calibrationEffectiveAt": "calibrationEffectiveAt",
        "calibrationFactor": "calibrationFactor",
        "calibrationPeriod": "calibrationPeriod",
        "calibrationResponseId": "calibrationResponseId",
        "calibrationStandardDeviation": "calibrationStandardDeviation",
        "calibrationTimeShift": "calibrationTimeShift",
        "channelBandType": "channelBandType",
        "channelDataType": "channelDataType",
        "channelInstrumentType": "channelInstrumentType",
        "channelOrientationCode": "channelOrientationCode",
        "channelOrientationType": "channelOrientationType",
        "depthKm": "depthKm",
        "description": "description",
        "eastDisplacementKm": "eastDisplacementKm",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "fapResponseId": "fapResponseId",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "nominalSampleRateHz": "nominalSampleRateHz",
        "northDisplacementKm": "northDisplacementKm",
        "orientationHorizontalDegrees": "orientationHorizontalDegrees",
        "orientationVerticalDegrees": "orientationVerticalDegrees",
        "units": "units",
        "verticalDisplacementKm": "verticalDisplacementKm",
      },
      "label": "Channel Columns",
      "menuLabel": "Channel Columns",
      "onChange": [Function],
      "rank": 9,
      "tooltip": "Select columns to be shown in the channel table below",
      "type": "CheckboxList",
      "values": Map {
        "name" => true,
        "effectiveAt" => true,
        "effectiveUntil" => true,
        "latitudeDegrees" => true,
        "longitudeDegrees" => true,
        "depthKm" => true,
        "elevationKm" => true,
        "nominalSampleRateHz" => true,
        "units" => true,
        "orientationHorizontalDegrees" => true,
        "orientationVerticalDegrees" => true,
        "calibrationFactor" => true,
        "calibrationPeriod" => true,
        "calibrationEffectiveAt" => true,
        "calibrationTimeShift" => true,
        "calibrationStandardDeviation" => true,
        "northDisplacementKm" => true,
        "eastDisplacementKm" => true,
        "verticalDisplacementKm" => true,
        "description" => true,
        "channelDataType" => false,
        "channelBandType" => false,
        "channelInstrumentType" => false,
        "channelOrientationCode" => false,
        "channelOrientationType" => false,
        "calibrationResponseId" => true,
        "fapResponseId" => true,
      },
      "widthPx": 220,
    },
  ],
  "rightToolbarItemDefs": Array [
    Object {
      "ianApp": true,
      "label": "Station",
      "rank": 0,
      "tooltip": "Currently Selected Station",
      "type": "LabelValue",
      "value": "name",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lat",
      "rank": 2,
      "tooltip": "Station Latitude",
      "type": "LabelValue",
      "value": "10.000°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lon",
      "rank": 3,
      "tooltip": "Station Longitude",
      "type": "LabelValue",
      "value": "10.000°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Depth",
      "rank": 4,
      "tooltip": "Depth (km)",
      "type": "LabelValue",
      "value": "100.000km",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Elev",
      "rank": 6,
      "tooltip": "Station Elevation",
      "type": "LabelValue",
      "value": "100.000km",
    },
    Object {
      "ianApp": true,
      "label": "Description",
      "rank": 5,
      "tooltip": "Station Description",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Type",
      "rank": 1,
      "tooltip": "Single Station or Array",
      "type": "LabelValue",
      "value": "Single Station",
      "widthPx": 400,
    },
  ],
}
`;

exports[`toolbar item defs has a getToolbarItemDefs function that matches snapshots with empty station 1`] = `
Object {
  "leftToolbarItemDefs": Array [
    Object {
      "displayLabel": true,
      "dropdownOptions": Array [
        "selectedEffectiveAt",
      ],
      "dropdownText": Array [
        "Unknown",
      ],
      "label": "Effective At",
      "onChange": [MockFunction],
      "rank": 7,
      "tooltip": "Select Effective Time to display",
      "type": "Dropdown",
      "value": "selectedEffectiveAt",
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-group-column-picker",
      "enumKeysToDisplayStrings": Map {
        "name" => "Name",
        "effectiveAt" => "Effective At",
        "effectiveUntil" => "Effective Until",
        "latitudeDegrees" => "Latitude",
        "longitudeDegrees" => "Longitude",
        "depthKm" => "Depth",
        "elevationKm" => "Elevation",
        "description" => "Description",
        "type" => "Type",
      },
      "enumOfKeys": Object {
        "depthKm": "depthKm",
        "description": "description",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "type": "type",
      },
      "label": "Channel Group Columns",
      "menuLabel": "Channel Group Columns",
      "onChange": [Function],
      "rank": 8,
      "tooltip": "Select columns to be shown in the channel group table below",
      "type": "CheckboxList",
      "values": Map {
        "name" => true,
        "effectiveAt" => true,
        "effectiveUntil" => true,
        "latitudeDegrees" => true,
        "longitudeDegrees" => true,
        "depthKm" => true,
        "elevationKm" => true,
        "description" => true,
        "type" => true,
      },
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-column-picker",
      "enumKeysToDisplayStrings": Map {
        "name" => "Name",
        "effectiveAt" => "Effective At",
        "effectiveUntil" => "Effective Until",
        "latitudeDegrees" => "Latitude",
        "longitudeDegrees" => "Longitude",
        "depthKm" => "Depth",
        "elevationKm" => "Elevation",
        "nominalSampleRateHz" => "Sample Rate",
        "units" => "Units",
        "orientationHorizontalDegrees" => "Horizontal Angle",
        "orientationVerticalDegrees" => "Vertical Angle",
        "calibrationFactor" => "Calibration Factor",
        "calibrationPeriod" => "Calibration Period",
        "calibrationEffectiveAt" => "Calibration Effective At",
        "calibrationTimeShift" => "Calibration Time Shift",
        "calibrationStandardDeviation" => "Calibration Std Dev",
        "northDisplacementKm" => "North Displacement",
        "eastDisplacementKm" => "East Displacement",
        "verticalDisplacementKm" => "Vertical Displacement",
        "description" => "Description",
        "channelDataType" => "Data Type",
        "channelBandType" => "Band Type",
        "channelInstrumentType" => "Instrument Type",
        "channelOrientationCode" => "Orientation Code",
        "channelOrientationType" => "Orientation Type",
        "calibrationResponseId" => "Calibration ID",
        "fapResponseId" => "FAP Resp ID",
      },
      "enumOfKeys": Object {
        "calibrationEffectiveAt": "calibrationEffectiveAt",
        "calibrationFactor": "calibrationFactor",
        "calibrationPeriod": "calibrationPeriod",
        "calibrationResponseId": "calibrationResponseId",
        "calibrationStandardDeviation": "calibrationStandardDeviation",
        "calibrationTimeShift": "calibrationTimeShift",
        "channelBandType": "channelBandType",
        "channelDataType": "channelDataType",
        "channelInstrumentType": "channelInstrumentType",
        "channelOrientationCode": "channelOrientationCode",
        "channelOrientationType": "channelOrientationType",
        "depthKm": "depthKm",
        "description": "description",
        "eastDisplacementKm": "eastDisplacementKm",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "fapResponseId": "fapResponseId",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "nominalSampleRateHz": "nominalSampleRateHz",
        "northDisplacementKm": "northDisplacementKm",
        "orientationHorizontalDegrees": "orientationHorizontalDegrees",
        "orientationVerticalDegrees": "orientationVerticalDegrees",
        "units": "units",
        "verticalDisplacementKm": "verticalDisplacementKm",
      },
      "label": "Channel Columns",
      "menuLabel": "Channel Columns",
      "onChange": [Function],
      "rank": 9,
      "tooltip": "Select columns to be shown in the channel table below",
      "type": "CheckboxList",
      "values": Map {
        "name" => true,
        "effectiveAt" => true,
        "effectiveUntil" => true,
        "latitudeDegrees" => true,
        "longitudeDegrees" => true,
        "depthKm" => true,
        "elevationKm" => true,
        "nominalSampleRateHz" => true,
        "units" => true,
        "orientationHorizontalDegrees" => true,
        "orientationVerticalDegrees" => true,
        "calibrationFactor" => true,
        "calibrationPeriod" => true,
        "calibrationEffectiveAt" => true,
        "calibrationTimeShift" => true,
        "calibrationStandardDeviation" => true,
        "northDisplacementKm" => true,
        "eastDisplacementKm" => true,
        "verticalDisplacementKm" => true,
        "description" => true,
        "channelDataType" => false,
        "channelBandType" => false,
        "channelInstrumentType" => false,
        "channelOrientationCode" => false,
        "channelOrientationType" => false,
        "calibrationResponseId" => true,
        "fapResponseId" => true,
      },
      "widthPx": 220,
    },
  ],
  "rightToolbarItemDefs": Array [
    Object {
      "ianApp": true,
      "label": "Station",
      "rank": 0,
      "tooltip": "Currently Selected Station",
      "type": "LabelValue",
      "value": "name",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lat",
      "rank": 2,
      "tooltip": "Station Latitude",
      "type": "LabelValue",
      "value": "Unknown°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lon",
      "rank": 3,
      "tooltip": "Station Longitude",
      "type": "LabelValue",
      "value": "Unknown°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Depth",
      "rank": 4,
      "tooltip": "Depth (km)",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Elev",
      "rank": 6,
      "tooltip": "Station Elevation",
      "type": "LabelValue",
      "value": "Unknown",
    },
    Object {
      "ianApp": true,
      "label": "Description",
      "rank": 5,
      "tooltip": "Station Description",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Type",
      "rank": 1,
      "tooltip": "Single Station or Array",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
  ],
}
`;

exports[`toolbar item defs has a getToolbarItemDefs function that matches snapshots with null station 1`] = `
Object {
  "leftToolbarItemDefs": Array [
    Object {
      "displayLabel": true,
      "dropdownOptions": Array [
        "selectedEffectiveAt",
      ],
      "dropdownText": Array [
        "Unknown",
      ],
      "label": "Effective At",
      "onChange": [MockFunction],
      "rank": 7,
      "tooltip": "Select Effective Time to display",
      "type": "Dropdown",
      "value": "selectedEffectiveAt",
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-group-column-picker",
      "enumKeysToDisplayStrings": Map {
        "name" => "Name",
        "effectiveAt" => "Effective At",
        "effectiveUntil" => "Effective Until",
        "latitudeDegrees" => "Latitude",
        "longitudeDegrees" => "Longitude",
        "depthKm" => "Depth",
        "elevationKm" => "Elevation",
        "description" => "Description",
        "type" => "Type",
      },
      "enumOfKeys": Object {
        "depthKm": "depthKm",
        "description": "description",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "type": "type",
      },
      "label": "Channel Group Columns",
      "menuLabel": "Channel Group Columns",
      "onChange": [Function],
      "rank": 8,
      "tooltip": "Select columns to be shown in the channel group table below",
      "type": "CheckboxList",
      "values": Map {
        "name" => true,
        "effectiveAt" => true,
        "effectiveUntil" => true,
        "latitudeDegrees" => true,
        "longitudeDegrees" => true,
        "depthKm" => true,
        "elevationKm" => true,
        "description" => true,
        "type" => true,
      },
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-column-picker",
      "enumKeysToDisplayStrings": Map {
        "name" => "Name",
        "effectiveAt" => "Effective At",
        "effectiveUntil" => "Effective Until",
        "latitudeDegrees" => "Latitude",
        "longitudeDegrees" => "Longitude",
        "depthKm" => "Depth",
        "elevationKm" => "Elevation",
        "nominalSampleRateHz" => "Sample Rate",
        "units" => "Units",
        "orientationHorizontalDegrees" => "Horizontal Angle",
        "orientationVerticalDegrees" => "Vertical Angle",
        "calibrationFactor" => "Calibration Factor",
        "calibrationPeriod" => "Calibration Period",
        "calibrationEffectiveAt" => "Calibration Effective At",
        "calibrationTimeShift" => "Calibration Time Shift",
        "calibrationStandardDeviation" => "Calibration Std Dev",
        "northDisplacementKm" => "North Displacement",
        "eastDisplacementKm" => "East Displacement",
        "verticalDisplacementKm" => "Vertical Displacement",
        "description" => "Description",
        "channelDataType" => "Data Type",
        "channelBandType" => "Band Type",
        "channelInstrumentType" => "Instrument Type",
        "channelOrientationCode" => "Orientation Code",
        "channelOrientationType" => "Orientation Type",
        "calibrationResponseId" => "Calibration ID",
        "fapResponseId" => "FAP Resp ID",
      },
      "enumOfKeys": Object {
        "calibrationEffectiveAt": "calibrationEffectiveAt",
        "calibrationFactor": "calibrationFactor",
        "calibrationPeriod": "calibrationPeriod",
        "calibrationResponseId": "calibrationResponseId",
        "calibrationStandardDeviation": "calibrationStandardDeviation",
        "calibrationTimeShift": "calibrationTimeShift",
        "channelBandType": "channelBandType",
        "channelDataType": "channelDataType",
        "channelInstrumentType": "channelInstrumentType",
        "channelOrientationCode": "channelOrientationCode",
        "channelOrientationType": "channelOrientationType",
        "depthKm": "depthKm",
        "description": "description",
        "eastDisplacementKm": "eastDisplacementKm",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "fapResponseId": "fapResponseId",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "nominalSampleRateHz": "nominalSampleRateHz",
        "northDisplacementKm": "northDisplacementKm",
        "orientationHorizontalDegrees": "orientationHorizontalDegrees",
        "orientationVerticalDegrees": "orientationVerticalDegrees",
        "units": "units",
        "verticalDisplacementKm": "verticalDisplacementKm",
      },
      "label": "Channel Columns",
      "menuLabel": "Channel Columns",
      "onChange": [Function],
      "rank": 9,
      "tooltip": "Select columns to be shown in the channel table below",
      "type": "CheckboxList",
      "values": Map {
        "name" => true,
        "effectiveAt" => true,
        "effectiveUntil" => true,
        "latitudeDegrees" => true,
        "longitudeDegrees" => true,
        "depthKm" => true,
        "elevationKm" => true,
        "nominalSampleRateHz" => true,
        "units" => true,
        "orientationHorizontalDegrees" => true,
        "orientationVerticalDegrees" => true,
        "calibrationFactor" => true,
        "calibrationPeriod" => true,
        "calibrationEffectiveAt" => true,
        "calibrationTimeShift" => true,
        "calibrationStandardDeviation" => true,
        "northDisplacementKm" => true,
        "eastDisplacementKm" => true,
        "verticalDisplacementKm" => true,
        "description" => true,
        "channelDataType" => false,
        "channelBandType" => false,
        "channelInstrumentType" => false,
        "channelOrientationCode" => false,
        "channelOrientationType" => false,
        "calibrationResponseId" => true,
        "fapResponseId" => true,
      },
      "widthPx": 220,
    },
  ],
  "rightToolbarItemDefs": Array [
    Object {
      "ianApp": true,
      "label": "Station",
      "rank": 0,
      "tooltip": "Currently Selected Station",
      "type": "LabelValue",
      "value": null,
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lat",
      "rank": 2,
      "tooltip": "Station Latitude",
      "type": "LabelValue",
      "value": "Unknown°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lon",
      "rank": 3,
      "tooltip": "Station Longitude",
      "type": "LabelValue",
      "value": "Unknown°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Depth",
      "rank": 4,
      "tooltip": "Depth (km)",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Elev",
      "rank": 6,
      "tooltip": "Station Elevation",
      "type": "LabelValue",
      "value": "Unknown",
    },
    Object {
      "ianApp": true,
      "label": "Description",
      "rank": 5,
      "tooltip": "Station Description",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Type",
      "rank": 1,
      "tooltip": "Single Station or Array",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
  ],
}
`;
